try put test output under mxbuild